Minor update to how the loading-mask and loading div are shown. Updated CSS and JS script so that we do not show the overlay by default with CSS, in case someone has javascript disabled because then we wouldn't be able to use javascript to hide the overlay. The JS script now temporarily sets html/body tags' overflow property to hidden before showing the loading-mask/loading div's, this way we hide the scrollbar in case user started out with a really small window so they can't scroll down to the bottom or resize their window larger while page is loading and click on a link where the overlay mask cuts off. Then on window onload event, we fadeout the loading-mask/loading div's and reset the html/body tags' overflow property to show the scroll bar if needed and to avoid conflicts with other CSS properties in the style. Also changed the position:"fixed" property of the "loading" div in the CSS to position:"absolute" as "fixed" could be quirky in older IE browsers (IE5/6). Works like a charm! :)

--- a/trunk/root/styles/prosilver/theme/pageloader.css
+++ b/trunk/root/styles/prosilver/theme/pageloader.css
@@ -5,33 +5,32 @@ html, body {
 }
 
 #loading-mask {
-	top: 0px;
-	left: 0px;
+	display: none;
+	position: absolute;
+	z-index: 20000;
+	top: 0px; left: 0px;
 	width: 100%;
 	height: 100%;
-	height: expression(document.documentElement.scrollHeight+'px');	/* IE */
-	width: expression(document.documentElement.scrollWidth+'px');	/* IE */
 	background-color: #000000;
 	opacity: 0.7;				/* Safari, Opera */
 	-moz-opacity:0.70; 			/* FireFox */
 	filter: alpha(opacity=70);	/* IE */
-	position: absolute;
-	z-index: 20000;
 }
 
 #loading {
-	position: fixed;
+	display: none;
+	position: absolute;
+	z-index: 20001;
 	top: 30%;
-	left: 50%;
+	left: 50%;					/* 50% from left to center */
 	width: 200px;
 	height: 40px;
 	border: 3px solid #BBC0C4;
 	padding: 10px;
+	margin-left: -113px;		/* subtract (width / 2) + border + padding */
 	background: #EFEFEF;
-	margin-left: -113px;
 	text-align: left;
 	font:bold 13px tahoma,arial,helvetica;
-	z-index: 20001;
 }
 
 #loading img {
